[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/UI/menu_box.png" type="Texture" id=1]
[ext_resource path="res://assets/UI/party_screen_background.png" type="Texture" id=2]
[ext_resource path="res://assets/UI/TitleScreen.png" type="Texture" id=3]
[ext_resource path="res://src/MainMenu/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://assets/UI/fonts/GameFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/UI/menu_selector.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Blink"
length = 4.0
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Control/TitleScreen:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/TitleScreen:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.25, 0.3, 0.35, 0.4, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control/TitleScreen:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2, 2.05, 2.1, 2.15, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 0 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TitleScreen:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/TitleScreen:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="WithSaveFile" type="NinePatchRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -24.0
margin_bottom = -79.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="RichTextLabel" type="RichTextLabel" parent="Control/WithSaveFile"]
margin_left = 16.0
margin_top = 16.0
margin_right = 120.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 5 )
text = "CONTINUE"
scroll_active = false

[node name="RichTextLabel2" type="RichTextLabel" parent="Control/WithSaveFile"]
margin_left = 16.0
margin_top = 48.0
margin_right = 120.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 5 )
text = "OPTION"
scroll_active = false

[node name="RichTextLabel3" type="RichTextLabel" parent="Control/WithSaveFile"]
margin_left = 16.0
margin_top = 32.0
margin_right = 120.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 5 )
text = "NEW   GAME"
scroll_active = false

[node name="Selector" type="TextureRect" parent="Control/WithSaveFile"]
margin_left = 7.0
margin_top = 17.0
margin_right = 15.0
margin_bottom = 25.0
texture = ExtResource( 6 )
expand = true

[node name="SaveFileInfo" type="NinePatchRect" parent="Control/WithSaveFile"]
visible = false
margin_left = 32.0
margin_top = 57.0
margin_right = 160.0
margin_bottom = 135.0
texture = ExtResource( 1 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="PlayerLabel" type="RichTextLabel" parent="Control/WithSaveFile/SaveFileInfo"]
margin_left = 8.0
margin_top = 17.0
margin_right = 61.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 5 )
text = "PLAYER"
scroll_active = false

[node name="Player" type="RichTextLabel" parent="Control/WithSaveFile/SaveFileInfo"]
margin_left = 55.0
margin_top = 17.0
margin_right = 121.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "[right]AAAAAAA[/right]"
text = "AAAAAAA"
scroll_active = false

[node name="BadgesLabel" type="RichTextLabel" parent="Control/WithSaveFile/SaveFileInfo"]
margin_left = 8.0
margin_top = 32.0
margin_right = 64.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 5 )
text = "BADGES"
scroll_active = false

[node name="Badges" type="RichTextLabel" parent="Control/WithSaveFile/SaveFileInfo"]
margin_left = 61.0
margin_top = 32.0
margin_right = 121.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
scroll_active = false

[node name="PokedexLabel" type="RichTextLabel" parent="Control/WithSaveFile/SaveFileInfo"]
margin_left = 8.0
margin_top = 46.0
margin_right = 69.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 5 )
text = "POKÃ©DEX"
scroll_active = false

[node name="Pokedex" type="RichTextLabel" parent="Control/WithSaveFile/SaveFileInfo"]
margin_left = 67.0
margin_top = 47.0
margin_right = 121.0
margin_bottom = 55.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
scroll_active = false

[node name="TimeLabel" type="RichTextLabel" parent="Control/WithSaveFile/SaveFileInfo"]
margin_left = 8.0
margin_top = 60.0
margin_right = 55.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 5 )
text = "TIME"
scroll_active = false

[node name="Time" type="RichTextLabel" parent="Control/WithSaveFile/SaveFileInfo"]
margin_left = 42.0
margin_top = 61.0
margin_right = 121.0
margin_bottom = 69.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "[right]1000:46[/right]"
text = "1000:46"
scroll_active = false

[node name="WithoutSaveFile" type="NinePatchRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -24.0
margin_bottom = -95.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="RichTextLabel2" type="RichTextLabel" parent="Control/WithoutSaveFile"]
margin_left = 16.0
margin_top = 30.0
margin_right = 120.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 5 )
text = "OPTION"
scroll_active = false

[node name="RichTextLabel3" type="RichTextLabel" parent="Control/WithoutSaveFile"]
margin_left = 16.0
margin_top = 14.0
margin_right = 120.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 5 )
text = "NEW   GAME"
scroll_active = false

[node name="Selector" type="TextureRect" parent="Control/WithoutSaveFile"]
margin_left = 7.0
margin_top = 14.0
margin_right = 15.0
margin_bottom = 22.0
texture = ExtResource( 6 )
expand = true

[node name="TitleScreen" type="Sprite" parent="Control"]
texture = ExtResource( 3 )
centered = false
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control"]
root_node = NodePath("../..")
autoplay = "Blink"
anims/Blink = SubResource( 1 )
anims/RESET = SubResource( 2 )
